--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -41,11 +41,10 @@ jobs:
 
     - name: Run Benchmarks and Save Output
       run: |
-        mkdir -p benchmarks_output
-        cargo bench --workspace --all-features | grep -A 100 'benchmarks' > benchmarks_output/cargo_bench_output.txt
+        sh update-bench.sh
 
     - name: Upload Benchmarks Output
       uses: actions/upload-artifact@v4
       with:
         name: benchmarks_output
-        path: benchmarks_output/cargo_bench_output.txt
+        path: benchmarks/output.txt
