--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+regex = "1.11.1"
 
 [dev-dependencies]
 divan = { version = "0.1.16" }
+
 
 [[bench]]
 name = "benchmarks"
